--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-parallax-tilt": "^1.7.171",
     "react-router-dom": "^6.17.0",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.7.32"
