--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "firebase": "^10.5.0",
     "hamburger-react": "^2.5.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-parallax-tilt": "^1.7.171",
+    "react-particle-image": "^1.0.2",
     "react-router-dom": "^6.17.0",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.7.32"
