--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.3",
     "axios": "^1.6.0",
     "firebase": "^10.5.0",
     "hamburger-react": "^2.5.0",
